  Ukrainian and Vietnamese translations
! XySubFilter: Always preserve subtitle frame aspect ratio
! Properties dialog: The creation time did not account for the local timezone
! Properties dialog: More consistent UI for the "Resources" tab
! PGSSub: Subtitles could have opaque background instead of transparent one
! Ticket #2420, Improve the reliability of the DirectShow hooks
! Ticket #2626, Fix some rare crashes when another application prevents MPC-HC from rendering the video
! Ticket #2953, DVB: Fix crash when closing window right after switching channel
! Ticket #3666, DVB: Don't clear the channel list on saving new scan result
! Ticket #3742, Sync Renderer: Fix rare crashes when using Sync Renderer with "synchronize video to display" option enabled
! Ticket #3864, Video renderers: Fix a possible crash caused by a race condition
! Ticket #3991, Video renderers: Fix a possible crash when the D3D device cannot be created
! Ticket #4029, Fix a rare crash when right-clicking on the playlist panel
! Ticket #4436, DVB: Improve compatibility with certain tuners
! Ticket #4551, Fix a possible crash when saving the current frame
! Ticket #4933, ASS/SSA subtitles: Fix a crash for elements with no horizontal border but a vertical one
! Ticket #4937, Prevent showing black bars when window size after scale exceed current work area
! Ticket #4938, Fix resetting the settings from the "Options" dialog: some settings were (randomly) not
  restored to their default value
! Ticket #4954, Open dialog: Support quoted paths
! Ticket #4956, Improve Play/Pause mouse click responsiveness
! Ticket #4957/#4982, Do not adjust window width in audio mode if no cover-art/logo is loaded or its size
  is limited to zero
! Ticket #4969, DVD playback could fail with an error related to copy protection on some systems
! Ticket #4971, Bring back "Play next file in the folder" event in single time events menu